<resources>
    <string name="title_activity_main">Fx Service</string>
    <string name="tile_service_name_adaptive_brightness">Adaptive Brightness</string>
    <string name="tile_service_name_fx_brightness">Screen filter</string>
    <string name="tile_service_name_auto_sync">Auto-sync</string>
    <string name="tile_service_name_screen_rotation_auto">Auto-rotate</string>
    <string name="app_name">Fx Service</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="permission_alert_dialog_message">To allow the tile to change brightness mode, please open settings and grant modify system settings permission.</string>
    <string name="screen_rotation_permission_alert_dialog_message">To allow overriding screen rotation, please open settings and grant modify system settings permission.</string>
    <string name="screen_rotation_permission_message_force_landscape_show_overlay">To force landscape mode, please open settings and allow display over other apps.</string>
    <string name="setting_not_found_alert_dialog_message">Adaptive brightness setting not found; the device does not support such brightness mode. The application will not work: you can uninstall it.</string>
    <string name="settings">Settings</string>
    <string name="settings_permission_modify_system_settings_title">Permission</string>
    <string name="settings_permission_modify_system_settings_summary_off">Modify system settings permission denied. The tile is not allowed to change brightness mode</string>
    <string name="settings_permission_modify_system_settings_summary_on">Modify system settings permission granted. The tile is allowed to change brightness mode</string>
    <string name="settings_github_link">https://github.com/rascarlo/AdaptiveBrightnessTile</string>
    <string name="key_permission_modify_system_settings">key_permission_modify_system_settings</string>
    <string name="source_code">Source Code</string>
    <string name="pref_key_filter_open_case">pref_key_filter_open_case</string>
    <string name="pref_key_filter_close_case">pref_key_filter_close_case</string>
    <string name="pref_key_filter_open_keyboard">pref_key_filter_open_keyboard</string>
    <string name="pref_key_filter_close_keyboard">pref_key_filter_close_keyboard</string>
    <string name="pref_key_case_close_delay_in_seconds">pref_key_case_close_delay_in_seconds</string>
    <string name="pref_key_case_close_delay_in_minutes">pref_key_case_close_delay_in_minutes</string>
    <string name="pref_key_case_close_lock_screen">pref_key_case_close_lock_screen</string>
    <string name="pref_key_keyboard_close_lock_screen">pref_key_keyboard_close_lock_screen</string>
    <string name="pref_key_keyboard_close_delay_in_seconds">pref_key_keyboard_close_delay_in_seconds</string>
    <string name="pref_key_proximity_wake_up">pref_key_proximity_wake_up</string>
    <string name="pref_key_proximity_wake_up_timeout">pref_key_proximity_wake_up_timeout</string>
    <string name="pref_key_light_sensor_adaptive_brightness">pref_key_light_sensor_adaptive_brightness</string>
    <string name="pref_key_light_sensor_screen_filter_threshold_on">pref_key_light_sensor_screen_filter_threshold_on</string>
    <string name="pref_key_light_sensor_screen_filter_threshold_off">pref_key_light_sensor_screen_filter_threshold_off</string>
    <string name="pref_key_accessibility_service">pref_key_accessibility_service</string>
    <string name="pref_key_screen_filter">pref_key_screen_filter</string>
    <string name="pref_key_screen_filter_disable_touch_screen">pref_key_screen_filter_disable_touch_screen</string>
    <string name="pref_key_screen_filter_color">pref_key_screen_filter_color</string>
    <string name="pref_key_screen_filter_brightness">pref_key_screen_filter_brightness</string>
    <string name="pref_key_auto_sync_scheduler">pref_key_auto_sync_scheduler</string>
    <string name="pref_key_auto_sync_start">pref_key_auto_sync_start</string>
    <string name="pref_key_auto_sync_end">pref_key_auto_sync_end</string>
    <string name="pref_key_auto_sync_on_duration">pref_key_auto_sync_on_duration</string>
    <string name="pref_key_auto_sync_off_duration">pref_key_auto_sync_off_duration</string>
    <string name="pref_key_keyboard_key_down_vibration_duration">pref_key_keyboard_key_down_vibration_duration</string>
    <string name="pref_key_keyboard_key_down_vibration_amplitude">pref_key_keyboard_key_down_vibration_amplitude</string>
    <string name="pref_key_keyboard_key_up_vibration_duration">pref_key_keyboard_key_up_vibration_duration</string>
    <string name="pref_key_keyboard_key_up_vibration_amplitude">pref_key_keyboard_key_up_vibration_amplitude</string>
    <string name="pref_key_screen_rotation_auto">pref_key_screen_rotation_auto</string>
    <string name="pref_key_screen_rotation_keyboard_landscape">pref_key_screen_rotation_keyboard_landscape</string>
    <string name="pref_key_screen_rotation_keyboard_landscape_locked">pref_key_screen_rotation_keyboard_landscape_locked</string>
    <string name="pref_key_screen_rotation_keyboard_portrait">pref_key_screen_rotation_keyboard_portrait</string>
    <string name="pref_key_screen_rotation_keyboard_portrait_locked">pref_key_screen_rotation_keyboard_portrait_locked</string>
    <string name="pref_key_screen_rotation_delay">pref_key_screen_rotation_delay</string>
    <string name="pref_key_screen_rotation_portrait_angle">pref_key_screen_rotation_portrait_angle</string>
    <string name="pref_key_screen_rotation_landscape_angle">pref_key_screen_rotation_landscape_angle</string>
    <string name="pref_key_screen_rotation_force_landscape">pref_key_screen_rotation_force_landscape</string>
    <string name="pref_key_debug_keyboard_show_status_change">pref_key_debug_keyboard_show_status_change</string>
    <string name="pref_summary_filters">Filter out selected events thus preventing side effects in focused app.</string>
    <string name="pref_summary_accessibility_service">Enable this for Fx Service to work at all</string>
    <string name="pref_summary_category_screen_filter">Overlay to adjust screen brightness beyond system settings.</string>
    <string name="pref_summary_screen_filter">Ctrl + Fn + O</string>
    <string name="pref_summary_screen_filter_disable_touch_screen">Your touch screen won\'t be responsive while screen filter overlay is on.</string>
    <string name="pref_summary_screen_filter_color">Ctrl + Fn + Up or Down</string>
    <string name="pref_summary_case_close">Screen will go off as soon as you close your case and your device will be locked after the specified timeout.</string>
    <string name="pref_summary_smart_case">Configure smart case actions.</string>
    <string name="pref_summary_keyboard_close">Whenever you close your keyboard, your device will be locked after the specified timeout.</string>
    <string name="pref_summary_proximity_sensor">Screen will turn on as soon as you open your case.</string>
    <string name="pref_summary_light_sensor">Screen brightness will be adjusted according to ambient light levels.</string>
    <string name="pref_summary_auto_sync">Enable auto-sync schedule to save battery power.</string>
    <string name="pref_summary_keyboard">Customise your keyboard behaviour.</string>
    <string name="pref_summary_screen_rotation">Override system screen rotation.</string>
    <string name="pref_summary_debug">Some debug options.</string>
    <string name="pref_title_accessibility_service">Accessibility service</string>
    <string name="pref_category_filters">Filters</string>
    <string name="pref_category_screen_filter">Screen filter</string>
    <string name="pref_category_case_close">Case close</string>
    <string name="pref_category_smart_case">Smart case</string>
    <string name="pref_category_keyboard_close">Keyboard close</string>
    <string name="pref_category_proximity_sensor">Proximity sensor</string>
    <string name="pref_category_light_sensor">Light sensor</string>
    <string name="pref_category_auto_sync">Auto-sync</string>
    <string name="pref_category_keyboard">Keyboard</string>
    <string name="pref_category_screen_rotation">Screen rotation</string>
    <string name="pref_category_debug">Debug</string>
    <string name="pref_title_case_close_delay_in_seconds">Lock screen after n seconds</string>
    <string name="pref_title_case_close_delay_in_minutes">Lock screen after n minutes</string>
    <string name="pref_title_case_close_lock_screen">Lock screen</string>
    <string name="pref_title_proximity_wake_up">Wake up screen</string>
    <string name="pref_title_proximity_wake_up_timeout">Wake up screen for n seconds</string>
    <string name="pref_title_keyboard_key_down_vibration_duration">Key down vibration duration (ms)</string>
    <string name="pref_title_keyboard_key_down_vibration_amplitude">Key down vibration amplitude</string>
    <string name="pref_title_keyboard_key_up_vibration_duration">Key up vibration duration (ms)</string>
    <string name="pref_title_keyboard_key_up_vibration_amplitude">Key up vibration amplitude</string>
    <string name="pref_title_light_sensor_adaptive_brightness">Adaptive brightness</string>
    <string name="pref_title_light_sensor_screen_filter_threshold_on">Turn on screen filter below n Lux</string>
    <string name="pref_title_light_sensor_screen_filter_threshold_off">Turn off screen filter from n Lux and above</string>
    <string name="pref_title_screen_filter">Enable screen filter</string>
    <string name="pref_title_screen_filter_disable_touch_screen">Disable touch screen</string>
    <string name="pref_title_screen_filter_color">Colour</string>
    <string name="pref_title_screen_filter_brightness">Brightness</string>
    <string name="pref_title_auto_sync_scheduler">Auto-sync scheduler</string>
    <string name="pref_title_auto_sync_start">Start time, hour of the day</string>
    <string name="pref_title_auto_sync_end">End time, hour of the day</string>
    <string name="pref_title_auto_sync_on_duration">Turn on auto-sync for n minutes</string>
    <string name="pref_title_auto_sync_off_duration">Turn off auto-sync for n minutes</string>
    <string name="pref_title_screen_rotation_auto">Automatic screen rotation</string>
    <string name="pref_title_screen_rotation_keyboard_landscape">Keyboard opening landscape switch</string>
    <string name="pref_title_screen_rotation_keyboard_landscape_locked">Keyboard opened landscape locked</string>
    <string name="pref_title_screen_rotation_keyboard_portrait">Keyboard closing portrait switch</string>
    <string name="pref_title_screen_rotation_keyboard_portrait_locked">Keyboard closed portrait locked</string>
    <string name="pref_title_screen_rotation_delay">Delay in centiseconds</string>
    <string name="pref_summary_screen_rotation_delay">Increase for more stability, decrease for more reactivity.</string>
    <string name="pref_title_screen_rotation_portrait_angle">Portrait angle</string>
    <string name="pref_summary_screen_rotation_portrait_angle">Pitch angle from which we should switch to portrait.</string>
    <string name="pref_title_screen_rotation_landscape_angle">Landscape angle</string>
    <string name="pref_summary_screen_rotation_landscape_angle">Roll angle from which we should switch to landscape.</string>
    <string name="pref_title_screen_rotation_force_landscape">Force landscape</string>
    <string name="pref_summary_screen_rotation_force_landscape">Force all apps to landscape when keyboard is open.</string>
    <string name="pref_title_filter_open_case">Case open (Fn+F4)</string>
    <string name="pref_title_filter_close_case">Case close (Fn+F3)</string>
    <string name="pref_title_filter_open_keyboard">Keyboard open (Fn+F6)</string>
    <string name="pref_title_filter_close_keyboard">Keyboard close (Fn+F5)</string>
    <string name="pref_title_debug_keyboard_show_status_change">Show keyboard status change</string>
</resources>