<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <net.slions.fxservice.FxPreferenceCategory
        app:icon="@drawable/ic_screen_filter"
        app:iconSpaceReserved="false"
        app:summary="@string/pref_summary_category_screen_filter"
        app:title="@string/pref_category_screen_filter">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="@string/pref_key_screen_filter"
            app:summary="@string/pref_summary_screen_filter"
            app:title="@string/pref_title_screen_filter" />

        <SeekBarPreference
            android:max="255"
            app:defaultValue="150"
            app:iconSpaceReserved="false"
            app:key="@string/pref_key_screen_filter_brightness"
            app:min="25"
            app:showSeekBarValue="true"
            app:summary="@string/pref_summary_screen_filter_color"
            app:title="@string/pref_title_screen_filter_brightness"
            app:updatesContinuously="true" />

        <com.jaredrummler.android.colorpicker.ColorPreferenceCompat
            android:defaultValue="@color/colorDefaultFilter"
            android:key="@string/pref_key_screen_filter_color"
            android:title="@string/pref_title_screen_filter_color"
            app:cpv_colorShape="circle"
            app:cpv_dialogType="preset"
            app:cpv_showAlphaSlider="true"
            app:iconSpaceReserved="false" />

        <SwitchPreferenceCompat
            app:icon="@drawable/ic_no_touch_input"
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="@string/pref_key_screen_filter_disable_touch_screen"
            app:summary="@string/pref_summary_screen_filter_disable_touch_screen"
            app:title="@string/pref_title_screen_filter_disable_touch_screen" />


    </net.slions.fxservice.FxPreferenceCategory>

    <net.slions.fxservice.FxPreferenceCategory
        app:icon="@drawable/ic_ambient_light"
        app:iconSpaceReserved="false"
        app:summary="@string/pref_summary_light_sensor"
        app:title="@string/pref_category_light_sensor">

        <SwitchPreferenceCompat
            app:defaultValue="false"
            app:iconSpaceReserved="false"
            app:key="@string/pref_key_light_sensor_adaptive_brightness"
            app:title="@string/pref_title_light_sensor_adaptive_brightness" />

        <SeekBarPreference
            android:max="60"
            app:defaultValue="0"
            app:dependency="@string/pref_key_light_sensor_adaptive_brightness"
            app:iconSpaceReserved="false"
            app:key="@string/pref_key_light_sensor_screen_filter_threshold_on"
            app:min="0"
            app:showSeekBarValue="true"
            app:title="@string/pref_title_light_sensor_screen_filter_threshold_on" />

        <SeekBarPreference
            android:max="60"
            app:defaultValue="10"
            app:dependency="@string/pref_key_light_sensor_adaptive_brightness"
            app:iconSpaceReserved="false"
            app:key="@string/pref_key_light_sensor_screen_filter_threshold_off"
            app:min="0"
            app:showSeekBarValue="true"
            app:title="@string/pref_title_light_sensor_screen_filter_threshold_off" />

    </net.slions.fxservice.FxPreferenceCategory>


</PreferenceScreen>